aktualisiertes JOSM Startscript